# interrobench

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
alembic/: README  env.py
alembic/versions/: 441cbfadb3eb_create_runs_and_attempts_tables.py  c9766e6a02b8_count_api_calls.py  fb084adcc574_make_tool_calls_optional.py
src/analysis/: main.py
src/interrobench/: interrogate.py  interrogees.py  main.py  shared.py  verify.py
tests/: test_main.py
