[metadata]
name = interrobench
version = 3.1.0

[options]
package_dir=
    =src
packages = find:
install_requires =
    aiohappyeyeballs >= 2.4.3
    aiohttp >= 3.11.0
    aiosignal >= 1.3.1
    alembic >= 1.14.0
    annotated-types >= 0.7.0
    anthropic >= 0.39.0
    anyio >= 4.6.2.post1
    attrs >= 24.2.0
    cachetools >= 5.5.0
    certifi >= 2024.8.30
    charset-normalizer >= 3.4.0
    cohere >= 5.11.4
    dataclasses-json >= 0.6.7
    defusedxml >= 0.7.1
    distro >= 1.9.0
    docstring_parser >= 0.16
    fastavro >= 1.9.7
    filelock >= 3.16.1
    frozenlist >= 1.5.0
    fsspec >= 2024.10.0
    google-api-core >= 2.23.0
    google-auth >= 2.36.0
    google-cloud-aiplatform >= 1.72.0
    google-cloud-bigquery >= 3.27.0
    google-cloud-core >= 2.4.1
    google-cloud-resource-manager >= 1.13.1
    google-cloud-storage >= 2.18.2
    google-crc32c >= 1.6.0
    google-resumable-media >= 2.7.2
    googleapis-common-protos >= 1.66.0
    greenlet >= 3.1.1
    groq >= 0.12.0
    grpc-google-iam-v1 >= 0.13.1
    grpcio >= 1.68.0
    grpcio-status >= 1.68.0
    h11 >= 0.14.0
    httpcore >= 1.0.6
    httpx >= 0.27.2
    httpx-sse >= 0.4.0
    huggingface-hub >= 0.26.2
    idna >= 3.10
    iniconfig >= 2.0.0
    jiter >= 0.7.1
    jsonpatch >= 1.33
    jsonpointer >= 3.0.0
    langchain >= 0.3.7
    langchain-anthropic >= 0.3.0
    langchain-cohere >= 0.3.1
    langchain-community >= 0.3.7
    langchain-core >= 0.3.18
    langchain-experimental >= 0.3.3
    langchain-google-vertexai >= 2.0.7
    langchain-groq >= 0.2.1
    langchain-openai >= 0.2.8
    langchain-text-splitters >= 0.3.2
    langchain-xai >= 0.1.0
    langsmith >= 0.1.143
    Mako >= 1.3.6
    MarkupSafe >= 3.0.2
    marshmallow >= 3.23.1
    multidict >= 6.1.0
    mypy-extensions >= 1.0.0
    numpy >= 1.26.4
    openai >= 1.54.4
    orjson >= 3.10.11
    packaging >= 24.2
    pandas >= 2.2.3
    parameterized >= 0.9.0
    pluggy >= 1.5.0
    propcache >= 0.2.0
    proto-plus >= 1.25.0
    protobuf >= 5.28.3
    psycopg2 >= 2.9.10
    pyasn1 >= 0.6.1
    pyasn1_modules >= 0.4.1
    pydantic >= 2.9.2
    pydantic-settings >= 2.6.1
    pydantic_core >= 2.23.4
    PyPika >= 0.48.9
    python-dateutil >= 2.9.0.post0
    python-dotenv >= 1.0.1
    pytz >= 2024.2
    PyYAML >= 6.0.2
    regex >= 2024.11.6
    requests >= 2.32.3
    requests-toolbelt >= 1.0.0
    rsa >= 4.9
    shapely >= 2.0.6
    six >= 1.16.0
    sniffio >= 1.3.1
    SQLAlchemy >= 2.0.35
    tabulate >= 0.9.0
    tenacity >= 9.0.0
    tiktoken >= 0.8.0
    tokenizers >= 0.20.3
    toolz >= 1.0.0
    tqdm >= 4.67.0
    types-requests >= 2.32.0.20241016
    typing-inspect >= 0.9.0
    typing_extensions >= 4.12.2
    tzdata >= 2024.2
    urllib3 >= 2.2.3
    wheel >= 0.45.1
    yarl >= 1.17.1

[options.extras_require]
dev = 
    pytest >= 8.3.3

[options.entry_points]
console_scripts = 
    interrobench = interrobench.main:main
