[metadata]
name = interrobench
version = 6.0.0

[options]
package_dir=
    =src
packages = find:
install_requires =
    alembic >= 1.14.0
    langchain >= 0.3.7
    langchain-anthropic >= 0.3.0
    langchain-cohere >= 0.3.1
    langchain-core >= 0.3.18
    langchain-google-vertexai >= 2.0.7
    langchain-groq >= 0.2.1
    langchain-openai >= 0.2.8
    langchain-text-splitters >= 0.3.2
    langchain-xai >= 0.1.0
    langsmith >= 0.1.143
    psycopg2 >= 2.9.10
    PyPika >= 0.48.9
    python-dotenv >= 1.0.1
    SQLAlchemy >= 2.0.35
    toolz >= 1.0.0
    wheel >= 0.45.1

[options.extras_require]
dev = 
    pytest >= 8.3.3

analysis =
    matplotlib >= 3.9.3
    numpy >= 1.26.4
    pandas >= 2.2.3
    scipy >= 1.14.1
    scikit-learn >= 1.5.2

[options.entry_points]
console_scripts = 
    interrobench = interrobench.main:main
    analysis = analysis.main:main
